# zentto-web3-frontend

./: .env.local.example  .gitignore  API_CONTRACT.md  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
docs/: _config.yml  arquitectura.md  auth.md  index.md  rutas.md
src/: theme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  providers.tsx
src/app/(app)/: layout.tsx  page.tsx
src/app/(app)/analytics/: page.tsx
src/app/(app)/compliance/: page.tsx
src/app/(app)/configuracion/: page.tsx
src/app/(app)/cuenta/: page.tsx
src/app/(app)/custodia/: page.tsx
src/app/(app)/disputas/: page.tsx
src/app/(app)/enviar/: page.tsx
src/app/(app)/explorer/: page.tsx
src/app/(app)/fees/: page.tsx
src/app/(app)/kyc/: page.tsx
src/app/(app)/mi-cuenta/: page.tsx
src/app/login/: page.tsx
src/app/recuperar/: page.tsx
src/app/register/: page.tsx
src/app/restablecer/: page.tsx
src/app/verificar/: page.tsx
src/components/analytics/: GraphView.tsx
src/components/auth/: AuthCard.tsx
src/components/data-grid/: ZenttoDataGrid.tsx
src/components/kyc/: CameraCapture.tsx  KycDocsCapture.tsx
src/components/layout/: AppShell.tsx  AuthGuard.tsx  LegalFooter.tsx  ZenttoAppShell.tsx  nav.ts
src/components/ui/: Copyable.tsx  InfoNote.tsx  LegalDoc.tsx  PageHeader.tsx  RiskBadge.tsx
src/lib/: api.ts  auth-context.tsx  endpoints.ts  format.ts  hooks.ts  next-auth-react-shim.tsx  types.ts  wallet-store.tsx
(+13 files in other folders)
