[package]
name = "zentto-web3"
version = "0.1.0"
description = "Zentto Web3 — app movil/escritorio (Tauri v2)"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zentto_web3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
